--- a/fullpage/package.json
+++ b/fullpage/package.json
@@ -24,18 +24,18 @@
   "devDependencies": {
     "browser-sync": "^2.13.0",
     "del": "^2.2.1",
-    "fullpage.js": "github:alvarotrigo/fullPage.js",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
-    "http-server": "^0.9.0",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "gulp-plumber": "^1.1.0"
   },
   "dependencies": {
     "font-awesome": "github:fortawesome/Font-Awesome",
-    "gulp-plumber": "^1.1.0"
+    "fullpage.js": "github:alvarotrigo/fullPage.js",
+    "http-server": "^0.9.0"
   }
 }
