--- a/fullpage/package.json
+++ b/fullpage/package.json
@@ -27,11 +27,12 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.4",
+    "gulp-plumber": "^1.1.0",
     "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-symlink": "^2.1.4",
     "gulp-uglify": "^1.5.4",
-    "run-sequence": "^1.2.2",
-    "gulp-plumber": "^1.1.0"
+    "run-sequence": "^1.2.2"
   },
   "dependencies": {
     "font-awesome": "github:fortawesome/Font-Awesome",
