--- a/todo-mvc/vue/src/package.json
+++ b/todo-mvc/vue/src/package.json
@@ -4,7 +4,9 @@
   "description": "learn vue.js, to finish the todo list function",
   "main": "index.js",
   "scripts": {
-    "test": "npm start"
+    "test": "npm start",
+    "start": "gulp dev",
+    "dev": "set NODE_ENV=development && node build/webpack/dev-server.js"
   },
   "repository": {
     "type": "git",
@@ -21,21 +23,42 @@
   },
   "homepage": "https://github.com/biluo62/demo",
   "devDependencies": {
+    "autoprefixer": "6.5.1",
     "babel-core": "6.17.0",
     "babel-loader": "6.2.5",
+    "babel-plugin-transform-runtime": "6.15.0",
     "babel-preset-es2015": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
+    "babel-preset-stage-2": "6.18.0",
+    "babel-runtime": "5.8.38",
+    "classnames": "^2.2.5",
     "css-loader": "0.25.0",
-    "eslint": "3.7.1",
+    "eslint": "2.2.0",
+    "eslint-config-standard": "5.1.0",
+    "eslint-friendly-formatter": "1.2.2",
     "eslint-loader": "1.5.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "eslint-plugin-html": "1.6.0",
+    "eslint-plugin-promise": "1.1.0",
+    "eslint-plugin-standard": "1.3.2",
+    "express": "4.14.0",
+    "extract-text-webpack-plugin": "1.0.1",
+    "gulp": "3.9.1",
+    "gulp-symlink": "2.1.4",
+    "gulp-util": "3.0.7",
     "html-webpack-plugin": "2.22.0",
+    "less": "2.7.1",
+    "less-loader": "2.2.3",
+    "postcss-loader": "0.13.0",
     "todomvc-app-css": "2.0.6",
     "vue": "1.0.28",
-    "vue-loader": "9.7.0",
+    "vue-hot-reload-api": "1.3.3",
+    "vue-html-loader": "1.2.3",
+    "vue-loader": "8.2.0",
     "vue-resource": "1.0.3",
-    "vue-router": "2.0.0",
+    "vue-router": "0.7.13",
+    "vue-style-loader": "1.0.0",
     "webpack": "1.13.2",
-    "webpack-dev-server": "1.16.2"
+    "webpack-dev-server": "1.16.2",
+    "webpack-hot-middleware": "2.13.2"
   }
 }
