--- a/todo-mvc/vue/src/package.json
+++ b/todo-mvc/vue/src/package.json
@@ -31,6 +31,7 @@
     "babel-preset-stage-0": "6.16.0",
     "babel-preset-stage-2": "6.18.0",
     "babel-runtime": "5.8.38",
+    "bson-objectid": "^1.1.4",
     "classnames": "^2.2.5",
     "css-loader": "0.25.0",
     "eslint": "2.2.0",
