--- a/todo-mvc/vue/src/package.json
+++ b/todo-mvc/vue/src/package.json
@@ -31,8 +31,8 @@
     "babel-preset-stage-0": "6.16.0",
     "babel-preset-stage-2": "6.18.0",
     "babel-runtime": "5.8.38",
-    "bson-objectid": "^1.1.4",
-    "classnames": "^2.2.5",
+    "bson-objectid": "1.1.4",
+    "classnames": "2.2.5",
     "css-loader": "0.25.0",
     "eslint": "2.2.0",
     "eslint-config-standard": "5.1.0",
@@ -51,6 +51,7 @@
     "less-loader": "2.2.3",
     "postcss-loader": "0.13.0",
     "todomvc-app-css": "2.0.6",
+    "url-loader": "0.5.7",
     "vue": "1.0.28",
     "vue-hot-reload-api": "1.3.3",
     "vue-html-loader": "1.2.3",
